--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,13 +1,56 @@
 .carousel {position: relative;}
-.carousel ul {overflow: auto; display: flex; flex-wrap: nowrap; scroll-snap-type: x mandatory; scroll-snap-points-y: repeat(100%); scroll-behavior: smooth; background: gray; -ms-overflow-style: none; scrollbar-width: none; margin: 0; padding: 0;}
+.carousel ul {overflow: auto; display: flex; flex-wrap: nowrap; scroll-snap-type: x mandatory; scroll-snap-points-y: repeat(100%); scroll-behavior: smooth; background: #fff; -ms-overflow-style: none; scrollbar-width: none; margin: 0; padding: 0;}
 .carousel ul::-webkit-scrollbar {display: none; /* Hide scrollbar for Chrome, Safari and Opera */} 
 .carousel ul li {position: relative; min-width: 100%; list-style: none; background: url() center center / cover no-repeat; scroll-snap-align: start;}
 .carousel ul li > * {position: absolute; left: 0; top: 0; width: 100%; height: 100%; }
-.carousel ul li > img {object-fit: cover;}
-.carousel ul li > div {display: flex; justify-content: center; align-items: center; color: white; font-weight: bold; font-size: 20px;}
+.carousel ul li > img {object-fit: contain;}
+.carousel ul li > div {display: flex; justify-content: center; align-items: self-end; color: white; font-weight: bold; font-size: 20px; z-index: 999;}
 .carousel ol {position: absolute; bottom: 15px; display: flex; justify-content: center; left: 50%; transform: translateX(-50%); z-index: 9;}
 .carousel ol li {list-style: none; padding: 0 5px;}
 .carousel ol li a {display: block; height: 10px; width: 10px; border: 2px solid white; background: transparent; border-radius: 100%;}
 .carousel ol li.selected a {background: white;}
 .carousel .prev, .carousel .next {display: none; user-select:none; cursor: pointer; font-size: 50px; color: white; position: absolute; left: 0; padding: 15px 15px 30px; top: 50%; transform: translateY(-50%); z-index: 9; line-height: 0;}
 .carousel .next {left: auto; right: 0;}
+.carousel ul li div >div.title {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 1.5em;
+    margin: 0;
+    text-align: center;
+    /* background: rgba(255, 255, 255, 0.6); */
+    font-size: 14px;
+    height: 20px;
+    /* color: #4A8D00; */
+    color: #fff;
+    font-family: verdana;
+}
+.nav {
+    position: relative;
+    z-index: 9;
+    top: 45%;
+    cursor: pointer;
+    color: #fff;
+    opacity: 0.7;
+    transition: all 0.66s ease;
+    -webkit-transition: all 0.66s ease;
+}
+
+.nav:hover {
+    opacity: 1.0;
+}
+
+#left {
+    left: 3%;
+    float: left;
+    color: #ccc;
+    z-index: 1000;
+}
+
+#right {
+    right: 3%;
+    float: right;
+    color: #ccc;
+    z-index: 1000;
+}
